--- a/HelpDeskTool/AddRemoveWindow.xaml
+++ b/HelpDeskTool/AddRemoveWindow.xaml
@@ -32,23 +32,23 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Label Content="Enter Username(s)" HorizontalAlignment="Left" Height="29" Margin="37,7,0,0" VerticalAlignment="Top" Width="108"/>
-        <Label Content="Enter AD Group(s):" HorizontalAlignment="Center" Height="29" Margin="0,7,0,0" VerticalAlignment="Top" Width="114"/>
-        <RichTextBox x:Name="ARusernameBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="37,36,0,0" VerticalAlignment="Top" Width="242" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A">
+        <Label Content="Enter Username(s)" HorizontalAlignment="Left" Height="29" Margin="37,7,0,0" VerticalAlignment="Top" Width="108" Foreground="#E5101010"/>
+        <Label Content="Enter AD Group(s):" HorizontalAlignment="Center" Height="29" Margin="0,7,0,0" VerticalAlignment="Top" Width="114" Foreground="#E5101010"/>
+        <RichTextBox x:Name="ARusernameBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="37,36,0,0" VerticalAlignment="Top" Width="242" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A" Padding="5,5,5,5">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <RichTextBox x:Name="ARgroupBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="307,36,0,0" VerticalAlignment="Top" Width="238" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A">
+        <RichTextBox x:Name="ARgroupBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="307,36,0,0" VerticalAlignment="Top" Width="238" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A" Padding="5,5,5,5" ScrollViewer.CanContentScroll="True">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <Label Content="Quick Add Buttons" HorizontalAlignment="Left" Height="44" Margin="566,22,0,0" VerticalAlignment="Top" Width="125" FontSize="14"/>
+        <Label Content="Quick Add Buttons" HorizontalAlignment="Left" Height="44" Margin="566,22,0,0" VerticalAlignment="Top" Width="125" FontSize="14" Foreground="#E5101010"/>
         <Button x:Name="AddGP" Content="ISDU__VPN__GP__FullAccess" HorizontalAlignment="Left" Height="26" Margin="556,57,0,0" VerticalAlignment="Top" Width="152" Click="AddGP_Click" Padding="2,2,2,2" FontSize="12">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
