--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -53,6 +53,7 @@
                     <Button x:Name="RemoteButton" Content="Remote in" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="RemoteButton_Click" TabIndex="6" FontSize="11" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="ComputerInfoButton" Content="PC info" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="ComputerInfoButton_Click" FontSize="11" TabIndex="2" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="MessageButton" Content="Message" HorizontalAlignment="Left" Height="30" Margin="555,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="7" FontSize="11" Click="MessageButton_Click" Padding="2,2,2,2" Background="White"/>
+                    <Button x:Name="ClearTempButton" Content="Clear Temp" HorizontalAlignment="Left" Height="30" Margin="620,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="8" FontSize="11" Padding="2,2,2,2" Background="White" Click="ClearTempButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="ToolTab3" Header="Master Search" Padding="2,2,2,2" Height="33">
@@ -62,7 +63,7 @@
                     <CheckBox x:Name="PrintersCB" Content="Printers" HorizontalAlignment="Left" Height="16" Margin="479,30,0,0" VerticalAlignment="Top" Width="80" IsChecked="True" TabIndex="5"/>
                     <CheckBox x:Name="SharedDriveCB" Content="Shared Drives" HorizontalAlignment="Left" Height="16" Margin="479,10,0,0" VerticalAlignment="Top" IsChecked="True" TabIndex="3"/>
                     <TextBox x:Name="MasterSearchBox" HorizontalAlignment="Left" Height="18" TextWrapping="Wrap" VerticalAlignment="Center" Width="140" FontSize="11" Margin="23,0,0,0" TabIndex="1" KeyUp="FuzzySearch" Padding="0,0,0,0"/>
-                    <Label Content="Type at least 4 characters to&#xA;start searching.&#xD;&#xA;Shows 10 results in each section" HorizontalAlignment="Left" Height="70" Margin="176,0,0,0" VerticalAlignment="Center" Width="186" Foreground="#FF545454" VerticalContentAlignment="Center" Padding="2,2,2,2"/>
+                    <Label Content="Type at least 4 characters to&#xA;start searching.&#xD;&#xA;Shows 10 results in each section" HorizontalAlignment="Left" Height="70" Margin="170,0,0,0" VerticalAlignment="Center" Width="186" Foreground="#FF545454" VerticalContentAlignment="Center" Padding="2,2,2,2"/>
                     <Button x:Name="MasterSearchButton" Content="Full Search" HorizontalAlignment="Left" Height="30" Margin="606,0,0,0" VerticalAlignment="Center" Width="60" FontSize="11" Click="MasterSearchButton_Click" TabIndex="6" Padding="2,2,2,2" Background="White"/>
                 </Grid>
             </TabItem>
