--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DTTool" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="HelpDeskTool" Height="750" Width="751"
+        Title="HelpDeskTool" Height="750" Width="874"
         WindowStartupLocation="CenterScreen">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -41,6 +41,7 @@
                     <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="360,0,0,0" VerticalAlignment="Center" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544" TabIndex="4" FontSize="11" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="LockoutToolButton" Content="Lockout&#xD;&#xA;Tool" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="LockoutToolButton_Click" FontSize="10" TabIndex="6" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="AddgroupButton" Content="Add/Remove&#xA;Group" HorizontalAlignment="Left" Height="30" Margin="555,0,0,0" VerticalAlignment="Center" Width="60" Click="AddgroupButton_Click" FontSize="9" TabIndex="7" Padding="2,2,2,2" Background="White"/>
+                    <Button x:Name="DUOButton" Content="DUO" HorizontalAlignment="Left" Height="30" Margin="620,0,0,0" VerticalAlignment="Center" Width="60" Click="DUOButton_Click" FontSize="11" TabIndex="8" Padding="2,2,2,2" Background="White"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="ToolTab2" Header="Computer Tools" Padding="2,2,2,2" Height="33">
@@ -54,6 +55,8 @@
                     <Button x:Name="ComputerInfoButton" Content="PC info" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="ComputerInfoButton_Click" FontSize="11" TabIndex="2" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="MessageButton" Content="Message" HorizontalAlignment="Left" Height="30" Margin="555,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="7" FontSize="11" Click="MessageButton_Click" Padding="2,2,2,2" Background="White"/>
                     <Button x:Name="ClearTempButton" Content="Clear Temp" HorizontalAlignment="Left" Height="30" Margin="620,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="8" FontSize="11" Padding="2,2,2,2" Background="White" Click="ClearTempButton_Click"/>
+                    <Button x:Name="MapPrinterButton" Content="Map Printer" HorizontalAlignment="Left" Height="30" Margin="685,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="9" FontSize="10" Padding="2,2,2,2" Background="White" Click="MapPrinterButton_Click" IsEnabled="False"/>
+                    <Button x:Name="CDollarButton" Content="C$" HorizontalAlignment="Left" Height="30" Margin="750,0,0,0" VerticalAlignment="Center" Width="60" TabIndex="10" FontSize="10" Padding="2,2,2,2" Background="White" Click="CDollarButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="ToolTab3" Header="Master Search" Padding="2,2,2,2" Height="33">
@@ -76,9 +79,12 @@
                 </Grid>
             </TabItem>
         </TabControl>
+        <Grid x:Name="DUOBox" Background="#FF777777" Margin="19,125,19,10" Visibility="Hidden">
+            <wv2:WebView2 x:Name="DUOWebView" Source="https://www.rochester.edu/it/security/duo/helpdesk/?domain=urmc" Margin="0,0,0,0"/>
+        </Grid>
         <Button x:Name="HiddenButton" Content="" HorizontalAlignment="Right" Height="10" Margin="737,724,0,0" VerticalAlignment="Bottom" Width="14" Background="{x:Null}" BorderBrush="{x:Null}" Click="HiddenButton_Click" IsTabStop="False" Foreground="{x:Null}" Opacity="0"/>
         <Grid x:Name="GamesBox" Background="#FF777777" Margin="19,125,19,10" Visibility="Hidden">
-            <wv2:WebView2 x:Name="webViewPanel" Source="" Margin="0,50,0,0"/>
+            <wv2:WebView2 x:Name="GameWebView" Source="" Margin="0,50,0,0"/>
             <Button x:Name="Game1Button" Content="Space Invaders" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game1Button_Click"/>
             <Button x:Name="Game2Button" Content="Dino Game" HorizontalAlignment="Left" Height="30" Margin="93,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game2Button_Click"/>
             <Button x:Name="Game3Button" Content="Pacman" HorizontalAlignment="Left" Height="30" Margin="158,10,0,0" VerticalAlignment="Top" TabIndex="5" FontSize="11" Padding="2,2,2,2" Background="White" Click="Game3Button_Click"/>
